fixed android feed wrap thing

--- a/blitz/staticfiles/css/sass/style.scss
+++ b/blitz/staticfiles/css/sass/style.scss
@@ -5687,7 +5687,7 @@ a#name, a#plan_name, a#client_name {
   display: inline-table;
   width: 91%;
   @include mobile-only {
-    width: 84%;
+    width: 83%;
     margin-left: 10px;
   }
 }
